2009-09-01  Marek Habersack  <mhabersack@novell.com>

	* ListView.cs: LoadControlState must call OnTotalRowCountAvailable
	after restoring the state, so that all parties subscribed to that
	event are given chance to react accordingly.
	SetPageProperties should use values stored in
	PagePropertiesChangingEventArgs arguments after handler returns.

2009-03-03  Marek Habersack  <mhabersack@novell.com>

	* ListView.cs: SetPageProperties invoked the
	PagePropertiesChanging event with the startRowIndex and
	maximumRows parameters reversed. Fixes bugs #481250 and #481252

	* DataPagerField.cs: GetQueryModeStartRowIndex must return 'true'
	if in query mode. Fixes bug #481248

2008-11-28  Marek Habersack  <mhabersack@novell.com>

	* ListView.cs: use the _correct_ operator when checking whether
	selected item index is within the data keys range.

2008-11-27  Marek Habersack  <mhabersack@novell.com>

	* ListView.cs: fixes in DoUpdate and DoDelete - check must be made
	that the requested item index is _smaller_ than the number of
	keys, not _bigger_.
	Enable using the lambda expression in CreateItemsInGroups - the
	gmcs bug preventing that was fixed.

2008-11-20  Marek Habersack  <mhabersack@novell.com>

	* ListView.cs: implemented the EditItem property.
	Use ConvertEmptyStringToNull in ExtractItemValues.

2008-11-19  Marek Habersack  <mhabersack@novell.com>

	* ListView.cs: added paremeter checks to AddControlToContainer.
	CreateInsertItem must instantiate the template and call raise the
	ItemCreated event.
	Added parameter checks to FindPlaceholder

2008-11-18  Marek Habersack  <mhabersack@novell.com>

	* ListViewContainer.cs: added

	* ListView.cs: implemented grouping support. With this ListView is
	feature complete.
	Refactored grouped/non-grouped rendering common code into separate
	methods.
	FindPlaceholder now looks for the placeholder recursively.
	Implemented forgotten UpdateItem method.
	Align group with empty items if there are no more data items.